--- a/spring-beans/pom.xml
+++ b/spring-beans/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.30</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>spring-jin</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
